# libopenai

source/: CMakeLists.txt  authorization.cpp  authorization.h  chat.cpp  chat.h  completions.cpp  completions.h  endpoints.cpp  endpoints.h  main.cpp  models.cpp  models.h  request.cpp  request.h  response.cpp  response.h
